yaaU
rpmD
aprE
nudJ
yhjE
AFK20_01350
acoB
pbpG
pbpX
proB
nepI
fruA
ABSDF2674
pcaC
smrA
iscA
unknown169
rarA
adeK
dcd
yfdC
phoB
unknown249
psaB
atpA
xdhB
ABAYE0940
acoD
sigE
pcaG
pntAA
hbpA
ABAYE0345
bauC
unknown13
ybgC
cyaA
imp
Pat9b_5877
metE
J537_1515
leuE
tcdA
rppH
unknown162
mtrA
purL
yiaD
argG
rplW
norG
aaeA
mexB
add
eftA
J537_0314
ureG
P23_1496
iscS
hemD
unknown259
ABAYE3122
ohr
ABAYE0484
epmA
smvA
purD
unknown22
rpfC
fmt
tesA
ttcA
rpoH
A1S_3910
betB
benK
ribA
proS
PA3762
recF
PBR_2196
pilZ
nlpD
barA
mg132
folK_2
rpsD
dapD
CAP51_00390
coaD
miaA
soxA
yxeP
maoA
bamD
aceF
recR
nadX_1
hflX
ABAYE0636
T630_3363
ABAYE3285
madC
bamA
rsmI
prpC
SAMN06296036_1407
yhfA
nagK
plsC2
yjdC
ppiA
cobA
NCTC7364_02454
ybgI
argC
hisF
rlmD
mltB_2
rpoC
lptG
nadC
rpsT
carO
J608_3861
ppiC
yegP
ypeA
T630_3248
ACIAD3468
slt
catC
yejE
ABAYE0742
ilvB
mucK
pcaK
ABAYE1109
DLM_2117
mrdA
rpsM
T630_0034
mdeA
ABAYE0372
yqaA
nrdA
bdhA
cbl
capA
ydfH
ABUW_2292
ada_2
truA
ABAYE2581
galU
acnA
bamE
unknown46
glnK
etfD
baeS
podJ
yccS
metR
ubiG
hemC
epsE
lytH
gatA
pilV
gmr
pstS
B9T23_03635
fokIM
ABAYE0513
ABAYE3690
ABZJ_00336
azlC
bcp
hutT
T630_1241
bioB
metN
mreC
cyoD
gdhA
lysS
T630_0963
gltT
mmuM
unknown2246
ssuA_5
gstB
ygaU
ppsA
azlD
fghA
ABZJ_01399
ABAYE1140
aac
unknown290
ped
fus
T630_2632
BURPS1710b_0319
ctpA
uppS
cioA
hom
PA1205
BGC29_00360
rsmD
ABAYE0450
pcaD
B9X91_15995
aroC
lptC
rpoZ
fadI
hutG
unknown10371
dsbA
NCTC7364_01785
piuB
bacA
alaA
J567_1125
cph2
cat
gloA
greB
T630_1821
tolC
ydaF
rpoB2
glpD
rnpA
brnQ
sdhD
ABAYE0337
ybdL
murC
yvdD
ABAYE2177
bioH
pleD
cysK
pntA
zur
plc
ABAYE2055
nuoL
acrR
unknown288
dnaJ
J608_3496
accA
dacD
bm3R1
lldD
hutU
pth
gst
phnR
tdt
benB
eryG
hslJ
kup
metQ
map
cutS
aqpZ
aceA
queG
mutM
nuoB
ubiA
nusB
kdpA
ACT4_028_01080
pilU
fumC
J518_0604
nsrR
A7M79_13310
yeaZ
dxs
betP
bauD
tpiA
unknown12
eamB
NE0381
T630_1616
ABAYE2359
ppc
atpD
czcD
yceJ
ansA
cca
scpB
lip1
gacA
benD
unknown309
rimI
emrB
dapE
ompR
ntrC
fabR_1
T630_3873
betI
nucA
infB
unknown55
T630_3053
unknown1085
btuB
ABSDF0674
ftsQ
nahR
unknown286
emrA
ABAYE2792
yfcF
pgaC
idh
yhgN
miaE
epmC
argB
A7M79_10685
bcr
thrS
tcyP
H125_04208
rplS
nagZ
ackA
murB
NCTC7364_02257
purN
murI
dinB
SAMN05216362_12525
unknown2349
ABSDF3226
ABAYE1616
ABAYE2039
mrcB
htrE
nusA
acr
catB
folP
phaC
cydB
sugE
NCTC7364_03409
iolS
valS
yjcH
argD
clpP
mhpC
Noc_0451
atpC
T630_3165
pgaD
dut
yciI
envZ
nasT
qorA
nudC
bioC
ribE
cysP
lldR
ACINNAV57_2685
pyrE
mrpF
J512_2652
ptrA
sucC
unknown253
nac
trpA
prpB
lagD
tsaA
yghU
rnfB
hpcD
rlmB_2
unknown263
cysD
angM
fruK
C1642_15475
dusA
cysL
yqjF
ABAYE0034
cysI
ytpA
glxR
nuoN
bfr
T630_3866
echS1
acoC
minD
rbfA
CU478_09065
rpsA
tal
secB
zitB
J560_0442
ABAYE3861
gatB
ABAYE0099
folC
lpxC
rpsI
J529_0322
pif1
ydiU
ABAYE3261
pnp
amt
infA
ttg2
metC
estR
unknown260
pnuC
cyoA
polA
hcaE
rpe
iscX
CL491_14105
pilJ
glnE
fkpA
crcB
nadA
ispH
thiO
aprA
kgtP
ydiK
galE
thyA
algZ
benM
fhaA
mdmC
T630_3849
actP
pdxJ
BCAM0164
rsbP
aaeB
ybhS_1
ACNJC6_00469
rplY
NCTC7364_00358
ybbK
CBE85_10280
tolQ
T630_0179
pabC
fimF
aroE
gltK
lifO
ABAYE1604
leuS
bphD
impC
pncA
benE2
nuoH
mpl
unknown285
aseR
gatC
IX87_11490
hmp
ampC
czcC
acs
engA
J608_0069
B9X91_00330
yfgC
snuA
AB237_0291
arnT
leuB
gltL
ABAYE0714
pilI
T630_1740
folB
queD
parC
pilH
yfcH
trpS
NCTC7364_03775
ABAYE2870
ABC0984
pgsA
phnO
comA
moaC
T630_3456
benA
caiT
yfeJ
ywlC
l11_03350
ABSDF2050
unknown256
skp
ybjG
yrhP
trpG
arsC
mscS
aepA
bioD
lipA
tsaC
yafJ
pyrG
pgpA
rplC
exoX
rpsF
ytcD
pilB
pagO
ABAYE3161
ACINNAV57_2694
baeB
rutR
sttH
ABAYE2944
ubiB3
J518_1895
gyrB
argS
pldA
fdx
J608_1802
trmB
ydbM
psaC
tetC
rpmG
ndh
mdaB
ABAYE3022
ycbL
leuC
CSB68_1051
basE
IL1567
rsmH
T630_1307
tauE2
unknown436
gspN
pheS
nfuA
fur
ABAYE0245
folA
ycaC
dksA
T630_2408
lolB
Pcryo_0162
dosP_1
ABZJ_00164
ftsY
cysJ
rpmC
prmA2
unknown7
sstT
mrdB
argA
ACIAD0437
rpsO
topA
ABW55_14985
gsk
gshA
yejB
fadB
lgt
lppL
J567_2553
pncB
ACIAD2947
moaE
ppk
yjcF
ygiN
sdpR
unknown132
rplA
ABAYE1708
namA
sdhA
csd1
czcA
ppiB
aroB
mmuP
ilvD
thiD
ABAYE3358
oprB
prtR
ndmA
hibch
yqgF
ptk
bolA
unknown257
unknown51
ilvY
mrcA
clpB
catF
kdsC
cobC
yqfA
hslR
ABZJ_02225
serC
secE
drgA
hmrR
IX87_14345
atsA
rpsL
phaD
dsdA
rpmB
mqo
yraA
leuA
lldP
unknown770
hisB
ywbG
erpA
pyrF
NCTC7364_02769
trmJ
wrn
bla
ABAYE1370
wrbA
ACIAD0355
kdpE
appY
iucA
GDI0186
narT
scoA
rlmH
hpxO
thrC
pstA
estA
msrA
BGC29_01015
hutI
pcaH
acrA
hemF
mrkB
murJ
pheT
hcaT
ohrR
hlyD
rlmL
vanB
purA
unknown44
yhhW_5
lsfA
mgh
alkK
mrpA
rnt
lptA
bioF
NDM229_15405
ubiH
trpF
sodC
unknown241
ureE
ygfZ
ybeQ
dctA
gluQ
J608_1938
BGC29_15845
impB
cysA
ABAYE0396
fprA1
ripA
hscB
bauB
aroP
mdcC
ABSDF3215
corC
budC
yahB
gspJ
lpxB
oxrA
ACIN5021_0532
A7A65_05150
aceE
pit
aspS
alkR
rplT
linC
benC
ynfM
nuoG
ppnP
rluE
rplJ
ptsO
unknown11
tonB
clpS
folK
B9X91_07360
efp
otsA
rpsH
dxr
J567_0524
bioA
uvrC
gspF
ilvA
yhbU
unknown43
carB
unknown237
acnD
ABAYE0333
dhaT
rplX
mmgC
gltD
prfC
ABAYE0057
puuR
nhaX
unknown266
P23_2370
tauC
rplF
glt-4
ytrE
rhtA
ABSDF1581
ABAYE2100
trxA
recA
pgaA
MU9_3279
unknown9
grxC
pcrA
yheS
scpA
lpxA
pRL120454
kmo
mltE
htpG
comN
recX
suhB
cobT
coq
katG
virF
bplSymb_SCF00905P014
ssuC
mltB
gudP
ureR
rraA
B4R90_13435
ppa
rhdA
NCTC7364_01116
pat
AB237_3007
ilvE2
dacA
rlmB
rimO
coaE
mlaD
ytnP
hutH
rplN
NCTC7364_03798
cobP
bcere0024_020320
ABAYE2271
typA
nasD
pdaC
nirB
rutF
yibN
dgt
comF
kcnb2
unknown254
p3ABAYE0097
pheP
trmL
unknown230
T630_0483
ABAYE1461
cvpA
hrp1
oprD
rpsJ
vanA
ddl
T630_3490
ychJ
hemA
unknown5178
dedA
T630_2079
htpX
ABAYE2481
pgl
fadR
lpd
rbpD
yjjU
J506_1909
J596_3713
vdlD
J633_1573
ruvC
aro
ogt
F910_00992
ureA
tatB
parB
pilQ
hisZ
sixA
safA
ABAYE2806
dcp
edd
NCTC7364_02503
aspP
yacG
pdhD
dhbB
pilR
ABAYE3709
tag
fadH
aaeR
unknown50
hemL
ubiE
gspG
cpcE
ABAYE1629
xxx
fis
ABAYE1108
hmgR
rnz
C1642_00240
yhhW
ABAYE0246
serB
uvrA
rbtA
dcyD
yvqK
holC
ABAYE3046
aceI
T630_0247
pabB
recO
uraH
ltrA
rutD_1
unknown218
bauE
ABAYE2768
ynfA
abhD3
ispD
cheA
pal
sthA
ebA4101
xenB
rep
qseB
loiP
unknown287
lpxL
ABAYE3336
A7M79_14085
mocR
glpE
pilM
yeaM
fabB
NG55_15005
ygaZ
unknown
gltC
aldH
yjjL
ABAYE3041
pspC
yoaE
ACIAD1125
ABZJ_02474
ahr
ifcA
unknown58
rpsS
BGC29_03645
ABAYE0875
unknown232
wprA
thi3
ABAYE0097
rpmA
metX
J506_3038
nuoE
A9988_14075
accC2
unknown310
APC94_15975
puuB
des6
rdgB
yhbY
kdpC
cysE
atoB
rplL
aspA
csgG
pilO
sbmA
rnc
hemB
phoD
rhtB
rplI
yfdH
pcnB
rpoA
ABSDF0137
fadE
gpo
P23_1282
ABZJ_03043
ompW
dapF
mexK
quiA
ureJ
sspB
rimP
aroK
yddE
fabR
flr
gpmI
czcB
ridA
feoA
upp
A7M79_10690
benP2
hsaD
lpxK
acnB
cysS
truB
gcdH
iacE
glmU
rlmN
xerD
gcvA
ebA3584
holA
recD
RC62_476
pcaB
cobW
cntA
pgpB
atpH
acnR
A7M79_05425
mepA
trmA
virS_3
cueR
uup
putR
NCTC7364_03019
ABAYE3506
narB
VR78_02025
dfp
smpB
bbsF
scpC
hsrA
APC94_02050
ACT4_001_01070
sun
aptA
pepN
T630_2348
rpsC
unknown165
rsuA
nemR
yjgR
cydX
ABAYE2153
rplM
rplV
gspE
clsA
acrB
bphC
alr4794
ABAYE0895
unknown248
yadG
prs
gap
glnQ
T630_1701
gpsA
hisD
pta
J518_1336
nadM
atpE
acdA
dmpI
ABAYE0108
NCTC7364_02801
tgpA_2
calB
unknown227
rplD
bpt
unknown261
wzb
ugpQ
glnL
BGC29_03285
blc
sspA
GDI1041
nrdB
aatA
cysW
rpmE
alsR
J596_1206
ygaY
plsC
sodB
kefF
nadX
SAMN04487817_10945
BGC29_01755
corA
acrC
rseP
F896_03216
dnaB
bbsG
cheR
rluD
cmk
unknown48
BGC29_15205
adh
cyoC
rpsP
hxlR
fahA
atl1
ethA
rhtC
viuB
A7M79_14240
ABSDF3347
sppA
pyrD
pcaU
ramA
glpK
rpsN
dnaA
fabH
alc
bpeE
unknown226
rpmF
crc
alaS
ABZJ_03373
ribF
hisG
quiC
ABAYE1046
mlaA
oxyR
qmcA
cysQ
dsbB
ftsL
accB
idnD
hslO
ydeN
J567_0793
ACINNAV82_2619
NCTC7364_03403
unknown311
acm
yfcA
oxaA
ACINNAV82_2999
kdsB
gph2
comE
ydjA
ABAYE3030
Atu3824
hin
ybeZ
lolC
acpP
xanP
sbp
BGC29_15885
rluA
iga
glcB
gdhB
P23_0357
caiB
caiA
rapA
hsaA
murE
lspA
pstC
macA
mgtA
ecnB
ung
trxB
ssuD
ABAYE0357
ABAYE0161
yigZ
ftsI
bmr3
thiE
A7M90_16970
ksdD
est
emrE
hda
yidD
kefB
yxaF
dusC
purM
iscR
maf
ybgF
unknown188
dcmA
NCTC7364_02177
pckG
glyA
ktrA
minC
maeA
T630_0455
yebC
thiL
ispZ
ABAYE0442
pap
fadR_1
vat
groL
cysN
cbbY
SAMN04487817_10965
A7M79_06505
fabD
tas
bvgS
ybaN
tsf
ndk
rstA
secF
nuoI
infC
queE
pstB
rrmp
unknown1086
mraY
P23_2281
prfB
AL489_004595
ABSDF0541
bepE
yodB
oatA
ftsA
cdsA
mdtC
rpmH
ruvA
ABAYE3457
gltX
ychF
yddG
OTEC02_00670
ABAYE2433
ACINNAV57_0791
AYL20_09980
rpmI
gabP
unknown306
norM
ABAYE0361
yaiL
ACIAD1995
P23_1878
AB237_0443
ABAYE0967
aroA
minE
ispB
yebA
ftsZ
macB
B9X91_25970
ABAYE3781
lpxD
ABAYE1527
ubiF
recB
glmM
hdc
rodZ
bfrD
prfA
mdcE
P23_3591
T630_3226
iVD
fpr
panD
ABAYE0025
dapH
benE
putP
JM28
yetF
sbcC
gspL
HP15_831
gidB
fdhD
prmA
ttgC
ABAYE1529
azr
IX87_15875
spoT
bamB
dtd
virS_2
tsaE
ydeP
A9Q98_05300
nfnB
tyrB
ABAYE3231
hisH
nuoD
yhbJ
hscA
argO
ABZJ_03469
accD
unknown133
mtgA
acoA
sdhB
ACINNAV57_0068
ACIAD1415
C1642_12115
dat
yjdF
argP
pssA
T630_3596
eftB
cgtA
sapB
mdtA
tmk
metK
hrpA
ribD
APC94_20110
yfeX
sfnG
cda1
ampD
pkn5
mucD
unknown300
trm
yhaI_2
unknown252
ureD
mdcH
yliJ
ABAYE0008
mnmA
unknown284
unknown15
preP2
mnmE
basC
hupB
CAT59_04245
ftsB
J500_1120
ABAYE3837
srpI
cpdA
purT
unknown2321
bmrU
mutS
ysxC
grxD
tatC
tenA
unknown258
ycfH
astA
rluC
foxA
ACINWC141_3733
yfcG
oppA
yciK
ptsI
purC
ABAYE3297
htrB
gapN
srpC
cysT
filF
rpoN
ABAYE0273
clpA
AsACE_CH02713
J608_3056
fumA
unknown164
frr
NCTC7364_03196
T630_0349
feoB
ureC
nikE
ydaD
fstK
agcS
rnhB
ABAYE1666
asd
unknown225
betT
guaA
metZ
tyrA
appA
yhaH
ilvE
mlaC
truC
ispA
metH
def
ybaB
lptF
BEI_2476
ABAYE1988
yrdA
T630_0205
olE1
ispG
J567_1301
ansB
entS
dhbF
ada
mhqA
unknown289
serS
rrtA
phaG
ppsC
pdxH
hisA
kynU
exbB
ruvB
rlmJ
tolR
hcaD
nusG
J608_0695
fkbP
unknown251
rplE
T630_2452
glpG
wax-dgaT
glnM
ABAYE0518
gmr_1
tht
ABAYE0627
ACINWC141_2269
J567_0330
cobS
secG
cycA
epmB
sfnB
thlA
acsB
priA
niaP
fhuA
hemH
ykgJ
BKE30_03170
ftsW
ygfA
rne
J610_2768
umuD
shiA
ABAYE3501
thiM
yggS
clcD_1
ntaB
rplR
aesT
arfA_1
mro
uvrB
BGC29_05990
cls
T630_1769
fkpB
adk
purF
lipB
ABAYE2480
yjiR
BFS30_01525
rpiA
apaH
T630_0028
ABAYE0960
purH
rnd
yhjB
msbA
argJ
ybjJ
metW
cynT
alkB
T630_3006
radA
NCTC7364_03554
yhxC
unknown231
glsA
raiA
hppD
ubiB
algR
ABZJ_03121
ndvA
J517_1055
ampG4
rpmJ
gcvH
anmK
algW
aes
rimM
rutG
T630_0312
nuoK
SAMN05444584_1741
NCTC7364_03692
fdxA
zapA
rstB
argF
radC
gspI
orn
hemE
plsB
rpsK
A7A65_14405
htpX_2
psiE
metF
sfp
phaE
P23_3252
ABAYE0467
rlpA
acadL
dapL
zapE
moaA
unknown131
A7M79_08360
ABAYE1053
pmrB
dtpA
ureF
mltG
ABAYE1695
fbh1
dgkA
birA
gmk
PST_4068
BIT33_06590
surE
nrdR
emrY
T630_2190
murF
LA2027
pnbA
lon
unknown170
madA
MDS_0777
tsaC1
rhbF
recJ
rpsE
sdhE
ABSDF2168
glnH
unknown183
recC
serA
greA
mutL
rsmA
J596_2216
proC
icd
yckA
unknown125
P23_2086
ABAYE0009
pyrB
hisC
nadE
T630_2553
alr
hlyB
unknown103
ybeY
ABAYE1441
ABAYE0247
eat
trpE
abkA
pilC
cbdB
ygdD
ubiC
ABAYE0267
limB
CHU_1921
cyoE
relA
P23_2726
qseC
ylxH
baeR
ydjP
phoU
ahcY
pbuX
A7M79_10060
fadA
liuB
thrB
agbB
fccB
rplK
unknown18
queC
dnaG
lptB
dppB
unknown1380
ycdT
glxK
cydA
yedQ
glpM
nadB
lptE
lpsB
T630_4063
ispF
tamA
glnA
hapE_4
recN
ligA
exbD
pgaB
hyi
astB
fbp
sfnA
J608_2317
dsbD
mutT
comEA
rplP
xpt
sohB
atoE
T630_0278
chpD
J524_3888
pdxB
coaX
paiB
NCTC7364_01825
supH
znuB
tamB
bdh1
rsgA
tyrS
mnmG
proA
secD
yxaF_1
smc
unknown269
capB
pepD
nuoA
tgt
citA
ccmA
glnS
hpt
ampG
rplU
nuoJ
nolF
ABAYE0659
ECA2041
gcs2
ktrB
BGC29_15605
algH
ahpC
mfd
yhjC
pksB
cysH
era
J529_1675
dnaQ
ggt
ABAYE0441
J567_2497
leuD
unknown45
PA3497
yhjX
SPO3394
rubA
slyD
ABAYE0374
yajC
ABAYE1450
T630_0699
rplB
gntT
ssb
arsB
yceI
lysA
ydcR
csiR
eutC
rutC
rpsB
cybC
ffh
moeA
nudL
ssuA
tusE
rpsQ
T630_0477
T630_3524
T630_0961
azi
pntB
lysP
paaG
unknown265
bauA
unknown726
aat
tkrA
iucD
sucA
lrpC
rpoB
mobA
pyrD_2
ileS
prmC
basH
cbbZ
PA3012
allA
bfrB
ephD
dusB
pkn1
ABAYE2676
gadX
yihG
yedA
uraD
ABAYE0887
rplO
lplT
acsA
betA
astE
yedI
mtnD
mreB
ureB
glpQ
rpsR
mnmC
pgi
rtcB
oruR
luxQ
dld
yafC
gsiA
ppx
guaB
dnaN
unknown57
T630_3675
dapA
hcaR
folD
ACINNAV57_3087
dnaX
fba
BWP00_17230
NCTC7364_03651
ytfL
BIT33_16080
feaB
ABAYE1557
J567_1581
smc_2
rpsG
atpB
A7M79_02480
ABAYE3142
PMI1218
atpI
fabG
prmB
lolD
ihfA
pfs
kdpD
thiC
mdtN
ABAYE0334
putA
ABAYE2769
iscU
cmr
ech1
ABAYE2119
yiaJ
ABAYE2552
murA
phoR
BGC29_10915
fabI
rsmC
unknown267
miaB
rho
yxjC
scoB
tesB
ABAYE1196
mscL
glyS
rrm
panC
STY1490
tolB
tetD
tatA
btuE
mmsA
slmA
T630_1071
phoX
madM
sanA
unknown14
omp38
alx
rpsU
queF
dnaE
zipA
ABSDF1177
P23_3394
hutC
alrA
ABAYE3744
dasR
chr
phoP
eno
ABAYE0453
mltC
mauR
hisI
mltF
cbpA
pgk
gcd
glmS
moeB
cah
unknown262
ABAYE2182
purB
ybaK
hisS
ABAYE0201
ACINNAV57_1983
ipdC
pilD
grpE
gfa
T630_4060
dsb
sdhC
trpD
ABSDF1196
ssuB
lpxO
guaD
modA
fsr
pepA
ycgN
purE
metG
pyrC
kdpB
mdcF
prsE
pheA
lrp_2
plcD
xerC
noxB
BGO19_13095
uspA
mdh
panB
iutA
BRADO5015
nth
recG
mutY
yihY
rlmE
hemN
csrA
smf
dadA
AB237_3156
trpB
yabJ
fadL
rcnR
oppC
unknown16
waaA
trpC
msrB
fklB
T630_2094
yahN
hyu
eutB
atpF
acrE
yajR
J529_0542
fas6
pcoA
unknown217
ABAYE0920
ndoA
unknown2324
hcaC
yaiI
secY
purU
ppaX
accC
fabZ
aarA
pncC
gabD
soj
hemJ
yfkJ
Smlt0580
rutD_4
ABAYE2669
ABAYE2089
gshB
P23_2400
ubiE_1
lrp
algC
ihfB
rubB
unknown1087
lepA
J622_02886
pilS
acdB
T630_3460
tusA_2
ydhP
yhbE
yybR
prpF
pcoB
C1642_08325
basJ
oprC
NCTC7364_03434
T630_1158
cafA
cidA_1
unknown56
rhtA_3
ABAYE0735
ilvC
yqeY
F910_03062
angR
rsmE_1
rsfS
trmD
lip
ycgJ
unknown216
AHL
gcp
ABAYE2861
nuoM
gyrA
TOL_1122
astD
aroQ
czcI
rnr
fdhF
queA
fimT
quiB
lolA
proP
cyoB
csaA
kdsA
C1642_05025
msuE
ABSDF2082
groS
ACINWC487_2184
murD
T630_2950
gabT
blh
estB
ygiD
ppiD
prcB
unknown229
trpH
pulG
pgm
comM
sucB
unknown291
metI
besA
ddc
sirB
carA
puuA
tdcB
nnrD
IL1258
NCTC7364_02604
rpoD
ABAYE0586
unknown255
cidA
gspD
cysM
crtD
fadD
ybaR
yicG
atpG
glnD
J567_3351
unknown59
NCTC7364_00203
nuoF
gltA
gph
ABSDF1619
xseA
J567_0062
zntR
dsbC
fdx2
xseB
ygiW
fruB
sdh
gltJ
azoR
thrH
lon2
sbcD
ABAYE3512
clpX
hchA
leuO
aro1
CPI82_11955
plaP
slyX
ribH
sirA
Atu1762
sinR
xdhC
eda
quiX
ilvN
ABSDF2663
T630_3256
T630_2593
unknown240
mazG
ylbK
NCTC7364_00458
rluB
T630_0368
ribB
tsx
piuC
tex
maiA
lnt
ABAYE2986
fpvA1
pilT
J506_1158
mbtK
P23_1342
BGC29_01230
argH
pilF
dmlR
porB
ypjD
xlnD
surA
rhlB
folE
J517_2307
AL532_23465
pyrH
adeN
yrfG
J532_0399
ligE
maeB
BGC29_00955
nadK
psd
glyQ
pepP
yqjI
panS
mma_0613
tusD
ABAYE0113
